# staticdhcpd

./: conf.py
src/: old_pyproject.toml  pyproject.toml
src/conf/: conf.py  db.ini
src/staticdhcpd/: __init__.py  cli.py  config.py  dhcp.py  logging_handlers.py  statistics.py  system.py
src/staticdhcpd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/staticdhcpd/databases/: __init__.py  _caching.py  _ini.py  _sql.py  generic.py
src/staticdhcpd/libpydhcpserver/: getifaddrslib.py
src/staticdhcpd/libpydhcpserver/dhcp_types/: constants.py  conversion.py  ipv4.py  mac.py  packet.py  rfc.py
src/staticdhcpd/web/: __init__.py  _resources.py  _templates.py  functions.py  headers.py  methods.py  server.py
to-much-data/debian/doc/: conf.py
to-much-data/deprecated/: old_setup.py
to-much-data/deprecated/old_libpydhcpserver/: __init__.py  dhcp.py  old_setup.py
to-much-data/deprecated/old_libpydhcpserver/doc/: conf.py
to-much-data/deprecated/old_libpydhcpserver/examples/: hardcoded_server.py
to-much-data/deprecated/old_libpydhcpserver/libpydhcpserver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
to-much-data/extensions/official/: dynamism.py  feedservice.py  httpdb.py  recent_activity.py  statistics.py
